--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "tribute-pipeline"
-version = "0.1.3"
+version = "0.1.4"
 description = "Deterministic crawl → insight extraction → classification pipeline with health/validation"
 authors = [{name = "Your Name", email = "you@example.com"}]
 readme = "README.md"
@@ -30,10 +30,12 @@ full = ["sentence-transformers", "torch", "transformers"]
 dev = ["pytest", "black"]
 
 [project.scripts]
-tribute-run = "scripts.run_pipeline:main"
+# New in-process runner avoids subprocess path fragility.
+tribute-run = "inprocess_runner:main"
+tribute-e2e = "inprocess_runner:main_all"
 tribute-validate = "scripts.validate_delivery:main"
 tribute-synthetic = "scripts.generate_synthetic_predictions:main"
-tribute-e2e = "scripts.run_pipeline:main_all"
+tribute-selfcheck = "selfcheck:main"
 
 [tool.setuptools.packages.find]
 # Include core source tree plus the top-level 'scripts' package so console entrypoints resolve after pip install.
